--- a/layout/style.css
+++ b/layout/style.css
@@ -32,17 +32,30 @@
 */
 
 .parent{
-    width: 100vw;
+    width: 800px;
     height: 400px;
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 2fr 1fr 1fr;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
+    row-gap: 30px;
+    column-gap: 40px;
+    /* gap: 10px 20px; */
 
 }
-
 .child{
     border: 1px solid red;
 }
+
+.child:nth-child(1){
+    border: 1px solid red;
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+    grid-column: 1 /3;
+    /* grid-row-start: 1;
+    grid-row-end: 3; */
+    grid-row: 1 / 3;
+}
+
 
 
 
@@ -74,4 +87,10 @@
     grid-column-end
     grid-row-start
     grid-row-end
-    grid-area */
+    grid-area 
+    
+
+    media queries
+    css animation
+    styling-images
+    */
